made grammar for Separators more comprehensible

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4276,8 +4276,10 @@ PrefixBinding    = 'prefix-binding' , BoundPrefix , IRIBoundToPrefix ,
                    [ Separators ] ;
 BoundPrefix      = 'bound-prefix' , [ Prefix ] ;
 IRIBoundToPrefix = 'full-iri' , FullIRI ;
-Separators       = 'separators' , String , String ;
-String           = SeparatorChar , { SeparatorChar } ;
+Separators       = 'separators' , LibraryOMSSeparator , OMSSymbolSeparator ;
+LibraryOMSSeparator = SeparatorString ;
+OMSSymbolSeparator  = SeparatorString ;
+SeparatorString  = SeparatorChar , { SeparatorChar } ;
 SeparatorChar    = ipchar | '/' | '?' | '#' ;
                    ($<$ \rm as defined in \nisref{IETF/RFC 3987} $>$)
 \end{lstlisting}
