commented to-do; this is beyond the scope of the current OMG submission (cf. #44)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4355,7 +4355,7 @@ sugar, the prefix map for a basic OMS is essential to determining the semantics 
 within the library.  Therefore, any DOL serialization \shall provide constructs for expressing such 
 prefix maps, even if the serialization does not support prefix maps otherwise.
 
-~\todonote[author=Christoph Lange,date=D:201111081514+01'00',type=todo]{somewhere we need to mention semantic annotations to embedded fragments in conforming OMS languages, \eg \%implied}
+%% ~\todonote[author=Christoph Lange,date=D:201111081514+01'00',type=todo]{somewhere we need to mention semantic annotations to embedded fragments in conforming OMS languages, \eg \%implied}
 
 
 
