reference to Unicode standard

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4256,7 +4256,7 @@ CURIE     = MaybeEmptyCURIE - ;
 MaybeEmptyCURIE = [ Prefix ] , RefWithoutComma ;
 RefWithoutComma = Reference - StringWithComma ;
 StringWithComma = { UChar } , ',' , { UChar } ;
-UChar     = $<$ any unicode character $>$ ;
+UChar     = $<$ any Unicode \nisref{ISO/IEC 10646} character $>$ ;
 Prefix    = NCName , ':' ; ($<$ \rm see ``NCName'' in \nisref{W3C/TR REC-xml-names:2009}, Section 3 $>$)
 Reference = Path , [ Query ] , [ Fragment ] ;
 Path      = ipath-absolute | ipath-rootless | ipath-empty ;
@@ -4658,7 +4658,7 @@ CURIE     = MaybeEmptyCURIE - ;
 MaybeEmptyCURIE = [ Prefix ] , RefWithoutComma ;
 RefWithoutComma = Reference - StringWithComma ;
 StringWithComma = { UChar } , ',' , { UChar } ;
-UChar     = $<$ any unicode character $>$ ;
+UChar     = $<$ any Unicode \nisref{ISO/IEC 10646} character $>$ ;
 Prefix    = NCName , ':' ; ($<$ \rm see ``NCName'' in \nisref{W3C/TR REC-xml-names:2009}, Section 3 $>$)
 Reference = Path , [ Query ] , [ Fragment ] ;
 Path      = ipath-absolute | ipath-rootless | ipath-empty ;
