Fix typo: "...OMS a ref..." -> "...OMS are ref..."
The "a" doesn't make sense here and @cmaeder and me agreed that "are"
looks about right in this context.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4236,7 +4236,7 @@ DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core
 \item DOL does support the declaration  of a ``no prefix'' mapping (covering CURIEs such as 
 \syntax{name}). \red{If there is no explicit declaration for the ``no prefix'', it defaults to a 
 context-sensitive expansion mechanism, which always prepends the library IRI (in the context of a 
-structured OMS where named OMS a referenced) resp.\ the current OMS IRI (in the context of a basic 
+structured OMS where named OMS are referenced) resp.\ the current OMS IRI (in the context of a basic
 OMS) to a symbol name. Both the separator between the library and the OMS name and that between the 
 OMS name and the symbol name can be declared (using the keyword \syntax{separators}), and both default to ``//''.}
 
