- native / basic substitution - remove of redundant basic

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1357,7 +1357,7 @@ The \emph{annotation language aspect}\index{language aspect ! annotation} of an 
 have no impact on the semantics. The annotation language aspect \shall be non-empty; it \shall
 provide the facility to express comments.
 
-We define the following levels of conformance of the abstract syntax of a basic
+We define the following levels of conformance of the abstract syntax of a 
  OMS language with DOL, listed from highest to lowest:
 
 \begin{description}
@@ -3780,7 +3780,7 @@ The DOL serializations also supports the \termref{annotation} of existing OMS vi
 
 DOL provides abstract syntax categories for
 \begin{itemize}
-\item \red{OMS} (which can be basic OMS in some OMS language, or unions, translations, minimizations, combinations, approximations of OMS, among others)
+\item \red{OMS} (which can be native OMS in some OMS language, or unions, translations, minimizations, combinations, approximations of OMS, among others)
 \item OMS mappings 
 \item OMS networks
 \item \red{queries}
