--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1262,7 +1262,7 @@ stating sentences about them;
 %% I believe that this is really obsolete now. –Christoph Lange, 2011-12-13
 % \item a formal definition of interoperability and how to measure the degree of interoperability of two systems\todonote[author=Christoph Lange,date=D:201110182133+02'00']{Well, now this might even be in scope.  We'll see...}
 \item mappings between services and devices, and definitions of service and device interoperability;
-\item non-monotonic logics\footnote{Logics (formalised as institutions) are necessarily monotonic; conformance criteria for non-monotonic logics arestill under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.}. 
+\item non-monotonic logics\footnote{Logics (formalized as institutions) are necessarily monotonic; conformance criteria for non-monotonic logics ares till under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.}. 
 
 \end{enumerate}
 
@@ -1745,6 +1745,9 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
 
   
 \termdefinition{term}{syntactic expression either consisting of a single \termref{non-logical symbol} or recursively composed of other terms (a.k.a. its subterms).}
+  \begin{note}
+	  A term belongs to the logical language aspect of an OMS language.
+  \end{note}
 
   
 \termdefinition{sentence}{term that is either true or false in a given \termref{model}, i.e.\ which is assigned a truth value in this \termref{model}.\CLnote[type=fyi]{From Common Logic, I changed ``unit of logical text'' to ``term''.}}
@@ -1761,6 +1764,9 @@ other axioms and theorems; or have another of many possible statuses.
   \begin{note}
   It is quite common that sentences are required to be closed (i.e.\ have no
   free variables). However, this depends on the OMS language at hand.
+  \end{note}
+  \begin{note}
+	  A sentence belongs to the logical language aspect of an OMS language.
   \end{note}
 
 
@@ -3985,8 +3991,8 @@ OMSDefn          = 'oms-defn' , OMSName , [ ConsStrength ] , OMS ;
 Symbol           = IRI ;
 SymbolMap        = 'symbol-map' , Symbol , Symbol ;
 SymbolOrMap      = Symbol | SymbolMap ;
-Term             = ($<$)an expression specific to a basic OMS language($>$) ;
-Sentence         = ($<$)an expression specific to a basic OMS language($>$) ;
+Term             = ($<$)an expression specific to an OMS language($>$) ;
+Sentence         = ($<$)an expression specific to an OMS language($>$) ;
                  
 OMSName          = IRI ;
                  
