some minor edits

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1925,7 +1925,7 @@ not considered sentences of that OMS.
 
   \termdefinition{OMS documentation}{set of all annotations\index{annotation} to an \termref{OMS}, plus any other documents and explanatory comments generated during the entire OMS building process.}
   \begin{note}
-    Adapted from \cite{SuarezFigueroaEtAl:OntologyGlossary2008}
+    Adapted from \cite{SuarezFigueroaEtAl:OntologyGlossary2008}.
   \end{note}
 \end{definitions}
 
@@ -2061,7 +2061,6 @@ sub-\termref{signature} of the original \termref{OMS}).}
 The goal of module extraction is ``decomposing an OMS into smaller, more manageable modules with
 appropriate dependencies'' \cite{DBLP:series/lncs/5445}.
   \end{note}
-
   \begin{example}
 Consider an OWL DL ontology about wines, from which we would like to extract a module about white 
 wines. That module would contain the declaration of the non-logical symbol ``white wine'', all 
@@ -2093,7 +2092,7 @@ best possible (in the sense of a maximum set of logical consequences)
 
 \sclause{Mappings Between OMS}
 
-   \termdefinitionLight{\termref{OMS mapping}\synonym link\subjectfield{OMS}}{relationship between two \termref{OMS}}
+   \termdefinitionLight{\termref{OMS mapping}\synonym link\subjectfield{OMS}}{relationship between two \termref{OMS}.}
   
 %%   \termdefinition{logical OMS mapping}{\termref{OMS mapping} that has a formal, logic-based semantics}
 %%   \begin{note}
@@ -2106,12 +2105,12 @@ best possible (in the sense of a maximum set of logical consequences)
  \termdefinition{symbol map item}{pair of symbols of two OMS, indicating how a symbol from the first OMS is mapped by a signature morphism to a symbol of the second OMS}
  \begin{note}
    A symbol map item is given as $s_1 \mapsto s_2$, where $s_1$ is a symbol from the \emph{source} OMS 
-   and $s_2$ is a symbol from the \emph{target} source of the OMS mapping.
+   and $s_2$ is a symbol from the \emph{target}  of the OMS mapping.
  \end{note}
 
   \termdefinitionLight{interpretation\index{interpretation}\synonym view\synonym refinement}{\termref{OMS mapping} that postulates a
 specialization relation
- between two \termref{OMS}} along a morphism between their signatures
+ between two \termref{OMS}} along a morphism between their signatures.
   \begin{note}
     An interpretation typically leads to proof obligations, \ie one has to prove that 
   translations of axioms\index{axiom} of the source OMS along the morphism accompanying the interpretation are theorems in the target OMS.
